--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,17 @@
-version: "3"
-
 services:
   web:
-    image: kanamart-back-office-local
+    image: nestjs-backend-base
     build:
       context: .
-      target: development
+      target: dev
       dockerfile: ./Dockerfile
     command: npm run start:dev
+    env_file:
+      .env
     ports:
     - 3000:3000
     expose:
       - '3000'
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
-    environment:
-      - WDS_SOCKET_HOST=127.0.0.1 
-      - CHOKIDAR_USEPOLLING=true
-      - WATCHPACK_POLLING=true 
-      - NODE_OPTIONS=--max-old-space-size=16384
+      - .:/app
+      - /app/node_modules
